2004-07-09  Rodney Dawes  <dobey@novell.com>

	* gui/e-day-view-top-item.c (e_day_view_top_item_draw_triangle):
	Add an argument for the event_num so we can get the event object
	Draw the left/right triangles with the right color for the event
	Fix a small alignment bug with the triangle points

	* gui/e-week-view-event-item.c (e_week_view_event_item_draw_triangle):
	Draw the left/right triangles with the right color for the event
	Fix a small alignment bug with the triangle points
	
2004-07-09  Rodrigo Moya <rodrigo@novell.com>

	Fixes #60289

	* gui/dialogs/select-source-dialog.c (select_source_dialog): set the
	absolute URI on the selected source, so that the ESource we keep
	around has a valid URI.

	* gui/e-calendar-view.c (transfer_item_to): when copying appointments,
	change the UID.
	(transfer_selected_items): don't pass hardcoded values to transfer_item_to.

2004-07-08  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gui/Makefile.am:
	tarball should ship .schemas.in.in files, not generated files.

2004-07-06  Rodrigo Moya <rodrigo@novell.com>

	* gui/gnome-cal.c (gnome_calendar_init): setup the widgets before
	the configuration.

2004-07-06  JP Rosevear  <jpr@novell.com>

	Fixes #60645
	
	* gui/e-calendar-view.c (e_calendar_view_new_appointment_full):
	guess when an item should be all day based on the selection time

2004-07-05  Rodrigo Moya <rodrigo@novell.com>

	* gui/gnome-cal.c (setup_widgets): don't set the timezone on the views
	here.
	(set_timezone): do it here.
	(client_cal_opened_cb): call set_timezone() here.

2004-07-02  Rodrigo Moya <rodrigo@novell.com>

	* gui/gnome-cal.c (set_view): update the internal current_view_type
	field and focus the newly selected view.

2004-07-02  Rodney Dawes  <dobey@novell.com>

	* gui/dialogs/url-editor-dialog.c (get_widgets):
	Get the label for the calendar list header also
	(init_widgets): Set the border widths for the dialog's vbox and
	action area to be more compliant with the HIG